--- a/404.html
+++ b/404.html
@@ -6,6 +6,17 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Qweet</title>
 
+        <meta property="og:title" content="Qweet - ask questions without raising your hands" />
+        <meta property="og:site_name" content="Qweet"/>
+        <meta property="og:url" content="http://qweet.github.io" />
+        <meta property="og:description" content="" />
+        <meta property="og:type" content="article" />
+        <meta property="og:locale" content="en_US" />
+        <meta property="og:locale:alternate" content="zh_HK" />
+        <meta property="article:author" content="https://www.facebook.com/bhkkwok" />
+        <meta property="article:publisher" content="https://www.facebook.com/bhkkwok" />
+
+
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:600,400,300,400italic,300italic">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="/css/bundle.css">
