--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <meta property="og:site_name" content="Qweet"/>
         <meta property="og:url" content="http://qweet.github.io" />
         <meta property="og:description" content="" />
+        <meta property="og:image" content="http://qweet.github.io/img/og-image.png" />
+        <meta property="og:image:width" content="1200" />
+        <meta property="og:image:height" content="630" />
         <meta property="og:type" content="article" />
         <meta property="og:locale" content="en_US" />
         <meta property="og:locale:alternate" content="zh_HK" />
