--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Qweet</title>
 
+        <!-- Facebook -->
         <meta property="og:title" content="Qweet - ask questions without raising your hands" />
         <meta property="og:site_name" content="Qweet"/>
         <meta property="og:url" content="http://qweet.github.io" />
@@ -17,11 +18,19 @@
         <meta property="og:locale" content="en_US" />
         <meta property="og:locale:alternate" content="zh_HK" />
 
+        <!-- Twitter -->
+        <meta name="twitter:card" content="summary" />
+        <meta name="twitter:site" content="@get_Qweet" />
+        <meta name="twitter:title" content="Qweet - ask questions without raising your hands" />
+        <meta name="twitter:description" content="" />
+        <meta name="twitter:image" content="http://qweet.github.io/img/logotype.png" />
 
+        <!-- Style -->
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:600,400,300,400italic,300italic">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="/css/bundle.css">
 
+        <!-- Prefetch -->
         <link rel="prefetch" href="/img/logotype.png">
 
         <!-- Favicon -->
@@ -45,6 +54,17 @@
         <meta name="msapplication-TileImage" content="/favicon/mstile-144x144.png">
         <meta name="msapplication-config" content="/favicon/browserconfig.xml">
         <meta name="theme-color" content="#E46A59">
+
+        <!-- Google Analytics -->
+        <script>
+            (function(i,s,o,g,r,a,m){i["GoogleAnalyticsObject"]=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,"script","//www.google-analytics.com/analytics.js","ga");
+
+            ga("create", "UA-69475895-1", "auto");
+            ga("send", "pageview");
+        </script>
     </head>
     <body>
         <div id="react-app" class="react-app"></div>
