--- a/404.html
+++ b/404.html
@@ -49,7 +49,7 @@
         <link rel="icon" type="image/png" href="/favicon/android-chrome-192x192.png" sizes="192x192">
         <link rel="icon" type="image/png" href="/favicon/favicon-16x16.png" sizes="16x16">
         <link rel="manifest" href="/favicon/manifest.json">
-        <link rel="shortcut icon" href="/favicon/favicon.ico">
+        <link rel="shortcut icon" href="/favicon.ico">
         <meta name="msapplication-TileColor" content="#E46A59">
         <meta name="msapplication-TileImage" content="/favicon/mstile-144x144.png">
         <meta name="msapplication-config" content="/favicon/browserconfig.xml">
