--- a/404.html
+++ b/404.html
@@ -6,6 +6,10 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Qweet</title>
 
+        <meta name="description" content="Qweet is an anonymous question asking platform in the classroom context, supporting auto-suggestion, polling, class statistic, presentation mode, and many other awesome features. Open a room and start asking question now!">
+        <meta name="keywords" content="question system, education tool, education software, class interaction, course, educational social media, anonymous, social network, social site, polling, classroom">
+        <meta name="author" content="Memory Leaker">
+
         <!-- Facebook -->
         <meta property="og:title" content="Qweet - ask questions without raising your hands" />
         <meta property="og:site_name" content="Qweet"/>
