--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <meta property="og:title" content="Qweet - ask questions without raising your hands" />
         <meta property="og:site_name" content="Qweet"/>
         <meta property="og:url" content="http://qweet.github.io" />
-        <meta property="og:description" content="" />
+        <meta property="og:description" content="Qweet is an anonymous question asking platform in the classroom context, supporting auto-suggestion, polling, class statistic, presentation mode, and many other awesome features. Open a room and start asking question now!" />
+        <meta property="article:publisher" content="https://www.facebook.com/Qweet-155906871428844" />
+        <meta property="article:author" content="https://www.facebook.com/Qweet-155906871428844" />
         <meta property="og:image" content="http://qweet.github.io/img/og-image.png" />
         <meta property="og:image:width" content="1200" />
         <meta property="og:image:height" content="630" />
@@ -26,7 +28,7 @@
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@get_Qweet" />
         <meta name="twitter:title" content="Qweet - ask questions without raising your hands" />
-        <meta name="twitter:description" content="" />
+        <meta name="twitter:description" content="Qweet is an anonymous question asking platform in the classroom context, supporting auto-suggestion, polling, class statistic, presentation mode, and many other awesome features. Open a room and start asking question now!" />
         <meta name="twitter:image" content="http://qweet.github.io/img/logotype.png" />
 
         <!-- Style -->
