--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <meta name="keywords" content="question system, education tool, education software, class interaction, course, educational social media, anonymous, social network, social site, polling, classroom">
         <meta name="author" content="Memory Leaker">
 
+        <!-- Google -->
+        <meta name="google" content="notranslate" />
+
         <!-- Facebook -->
         <meta property="og:title" content="Qweet - ask questions without raising your hands" />
         <meta property="og:site_name" content="Qweet"/>
@@ -50,16 +53,14 @@
         <link rel="apple-touch-icon" sizes="152x152" href="/favicon/apple-touch-icon-152x152.png">
         <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon-180x180.png">
         <link rel="icon" type="image/png" href="/favicon/favicon-32x32.png" sizes="32x32">
-        <link rel="icon" type="image/png" href="/favicon/favicon-194x194.png" sizes="194x194">
-        <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96">
         <link rel="icon" type="image/png" href="/favicon/android-chrome-192x192.png" sizes="192x192">
+        <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96">
         <link rel="icon" type="image/png" href="/favicon/favicon-16x16.png" sizes="16x16">
         <link rel="manifest" href="/favicon/manifest.json">
-        <link rel="shortcut icon" href="/favicon.ico">
-        <meta name="msapplication-TileColor" content="#E46A59">
+        <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#f26949">
+        <meta name="msapplication-TileColor" content="#f26949">
         <meta name="msapplication-TileImage" content="/favicon/mstile-144x144.png">
-        <meta name="msapplication-config" content="/favicon/browserconfig.xml">
-        <meta name="theme-color" content="#E46A59">
+        <meta name="theme-color" content="#f26949">
 
         <!-- Google Analytics -->
         <script>
